--- a/src/ai_page/Css_files/Choose.css
+++ b/src/ai_page/Css_files/Choose.css
@@ -1,12 +1,24 @@
 .app {
     padding: 20px;
+    margin-left: 250px;
     background: #f0f0f0;
     min-height: 100vh;
+    max-width: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
+  .top-left {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: black; 
+    font-size: 20px; 
+    cursor: pointer;
+    z-index: 1; 
+    user-select: none;
+}
+
   .game-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
