--- a/src/ai_page/Css_files/gen_GameCard.css
+++ b/src/ai_page/Css_files/gen_GameCard.css
@@ -1,4 +1,3 @@
-/* GameGenerator.css */
 .container {
     padding: 20px;
     max-width: 800px;
@@ -11,6 +10,16 @@
     padding: 10px;
     box-sizing: border-box;
   }
+  .top-left {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: black; 
+    font-size: 20px; 
+    cursor: pointer;
+    z-index: 1; 
+    user-select: none;
+}
   
   button {
     margin: 5px;
