--- a/src/ai_page/Css_files/gen_game.css
+++ b/src/ai_page/Css_files/gen_game.css
@@ -1,9 +1,18 @@
-/* Css_files/gen_character.css */
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+  .top-left {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: black; 
+    font-size: 20px; 
+    cursor: pointer;
+    z-index: 1; 
+    user-select: none;
+}
   
   .image-container {
     display: flex;
